--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherApp"
         android:usesCleartextTraffic="true">
-        <activity android:name=".presentation.citiesactivity.view.CitiesActivity"></activity>
+        <activity android:name=".presentation.cities.view.CitiesActivity"></activity>
         <activity android:name=".presentation.weather.view.WeatherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
